Correction of the reopen bug when removing a selected option Adding placeholder when there is no more options to select

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="select-replacement-placeholder" data-placeholder-content="Select an option"></div>
                     <span class="select-replacement-arrow"></span>
                     <div class="select-replacement-options">
-                        <ul class="select-replacement-options-list">
+                        <ul class="select-replacement-options-list" data-text-empty="No option in the select" data-text-no-more="No more option to select">
                             <li class="select-replacement-option" data-value="1">test1</li>
                             <li class="select-replacement-option" data-value="2">test2</li>
                             <li class="select-replacement-option" data-value="3">test3</li>
